# stograde

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.gcc  Doxyfile  LICENSE  README.md  firefox.txt  log_update_test.py  mypy.ini  renovate.json  requirements.txt  sample_input.json  setup.cfg  setup.py  tox.ini  update.py  update.sh
.github/: dependabot.yml
_scripts/: add_newline_before.py  columnize  columnize.py  flatten.py  generate-email  generate-email.py  markdownify  markdownify.py  open-grades  progress.py  run-file  run.py  run_command.py  run_file.py
_specs/: hw1.yaml  hw11.yaml  hw12.yaml  hw13.yaml  hw14.yaml  hw15.yaml  hw16.yaml  hw18.yaml  hw19.yaml  hw2.yaml  hw21.yaml  hw23.yaml  hw24.yaml  hw3.yaml  hw4.yaml  hw7.yaml  hw8.yaml  hw9.yaml  lab2.yaml
config/: environment.sample
cs251tk/: cs251tk.py  referee.py
docs/: CI.md  DRIVE.md  GETTING_STARTED.md  RECORD.md  REFEREE.md  REPO.md  SPECS.md  TABLE.md  USAGE.md  WEB.md
integration_tests/: test_e2e.py
lib/: __init__.py  add_newline_before.py  args.py  chdir.py  check_for_updates.py  columnize.py  find_unmerged_branches.py  find_unmerged_branches_in_cwd.py  flatten.py  format_collected_data.py  get_students.py  gist.py  helpers.py  markdownify.py  progress.py  progress_bar.py  run.py  run_command.py  save_recordings.py  single_student.py  size.py  specs.py  termcolor.py  uniq.py  warn.py
log_update/: __init__.py  ansi_escapes.py  cli_cursor.py  restore_cursor.py  run_once.py  spinner.py
script/: crontab  deploy  docker-build  (+7 more)
(+394 files in other folders)
