[metadata]
description-file = README.md

[tool:pytest]
addopts = --flake8 --cov=stograde --cov-report term-missing test/
markers:
  datafiles: load datafiles
flake8-max-line-length = 120
flake8-ignore =
  test_save_recordings.py E501 F501

[coverage:report]
exclude_lines =
  if TYPE_CHECKING:
omit =
  */referee/*
  */webapp/server.py
